Feature/banner (#37)
* Adding error prone
* Improving some tests
* Improving tests with structure Given When Then
* Updating submodules with new testing rules for java
* Updating CHANGELOG.md